feat: firebase authentication added

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.login-backdrop {
+  width: 100%;
+  background-image: url("https://i.pinimg.com/originals/2a/5a/4b/2a5a4b69a09bdb4c651bd29c64bdcc11.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
