--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,6 +1,6 @@
 .about {
     height: 600px;
-    background-image: url('backdrop.png');
+    background-image: url('/src/components/About/images/backdrop.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -33,4 +33,8 @@
 .about-text {
     text-align: justify;
     margin: 30px;
+}
+
+.about-text p {
+    font-size: 18px;
 }
