--- a/src/components/Examinations/examinations.css
+++ b/src/components/Examinations/examinations.css
@@ -1,10 +1,72 @@
+.gre-backdrop {
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.gre-backdrop img {
+    width: 100%;
+    height: 600px;
+    opacity: 0.5;
+    position: absolute;
+    border-radius: 30px;
+}
+
+.gre-image-content {
+    letter-spacing: 10px;
+    position: relative;
+    height: 600px;
+    text-align: center;
+    vertical-align: text-bottom;
+    padding-top: 25%;
+}
+
 .about-exam {
     text-align: justify;
-    margin-top: 50px;
+    padding: 40px 30px;
+    font-weight: 500;
 }
 
-.about-exam p, li {
+.heading {
+    padding: 30px 0 10px 0;
+}
+
+.about-exam p, .about-exam li {
     font-size: 18px;
     line-height: 2;
+    color: rgb(75, 75, 75);
 }
 
+/* .about-exam ul li {
+    list-style: none;
+    margin: 0;
+	padding: 12px 0 12px 35px;
+    background-image: url('./images/b2.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 30px;
+}  */
+
+.about-exam h2, .about-exam h3, .about-exam h4, .about-exam h5, .about-exam h6 {
+    color: rgb(20, 1, 56);
+    font-weight: 700;
+}
+
+.index {
+    text-align: left;
+    background-color: #212529;
+    color: white;
+    padding: 0 20px;
+}
+
+.index a, .index p {
+    display: block;
+    font-size: 16px;
+    line-height: 2;
+    text-decoration: none;
+    margin: 10px 0;
+}
+
+.index a {
+    color: rgb(121, 198, 201);
+}
