--- a/src/components/Examinations/examinations.css
+++ b/src/components/Examinations/examinations.css
@@ -1,10 +1,10 @@
-.gre-backdrop {
+.backdrop {
     overflow: hidden;
     position: relative;
     margin-bottom: 40px;
 }
 
-.gre-backdrop img {
+.backdrop img {
     width: 100%;
     height: 600px;
     opacity: 0.5;
@@ -12,7 +12,7 @@
     border-radius: 30px;
 }
 
-.gre-image-content {
+.image-content {
     letter-spacing: 10px;
     position: relative;
     height: 600px;
@@ -29,6 +29,8 @@
 
 .heading {
     padding: 30px 0 10px 0;
+    color: rgb(20, 1, 56);
+    font-weight: 700;
 }
 
 .about-exam p, .about-exam li {
@@ -37,15 +39,6 @@
     color: rgb(75, 75, 75);
 }
 
-/* .about-exam ul li {
-    list-style: none;
-    margin: 0;
-	padding: 12px 0 12px 35px;
-    background-image: url('./images/b2.png');
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 30px;
-}  */
 
 .about-exam h2, .about-exam h3, .about-exam h4, .about-exam h5, .about-exam h6 {
     color: rgb(20, 1, 56);
